aulas 24 e 25 utilizando templates

--- a/WebContent/resources/css/estilos.css
+++ b/WebContent/resources/css/estilos.css
@@ -68,8 +68,43 @@
 	background: powderblue;
 }
 	
+.titulo {
+	font-size: 1.4em;
+	font-style: italic;
+	font-family: Palatino;
+	text-align: center;
+}	
+
+#cabecalho {
+	padding: 20px;
+	height: 30px;
+	margin-bottom: 10px;
+	background: #ddd;
+	border: 1px solid darkGray;
+}
 	
-	
+#barraEsquerda{
+	border: thin solid lightGray;
+	padding: 5px;
+	width: 150px;
+	background: #eee;
+}
+
+#conteudo {
+	padding: 5px;
+	border: thin solid lightGray;
+	background: #fefeef;
+	position: absolute;
+	right: 8px;
+	left: 180px;
+	height: 400px;
+	top: 90px;
+}
+
+
+
+
+
 	
 	
 	
