--- a/WebContent/templates/menu.xhtml
+++ b/WebContent/templates/menu.xhtml
@@ -14,6 +14,7 @@
 	 		<h:commandLink action="/tabelas/tabelasComEstilosCSS" value="Tabelas com estilos" />
 	 		<h:commandLink action="/tabelas/tabelaEditavel" value="Tabelas editavel" />
 	 		<h:commandLink action="/meusComponentes" value="Componentes" />
+	 		<h:commandLink action="/formValidacaoHibernate" value="Validacao Hibernate" />
 	 		<h:commandLink action="#{controleCRUDAjax.listar()}" value="Crud AJAX" />
 	 	</h:panelGrid>
 	 </h:form>
