internacionalizacao parte 1 ok

--- a/WebContent/templates/cabecalho.xhtml
+++ b/WebContent/templates/cabecalho.xhtml
@@ -5,7 +5,7 @@
       xmlns:h="http://java.sun.com/jsf/html"> 
 
 	<div class="titulo">
-		 JSF 2
+		 #{msgs['cabecalho.titulo']}
 	</div>
 	 
 </html>
